# MSSqlPwner

./: .gitignore  pyproject.toml
mssqlpwner/classes/: query_builder.py
mssqlpwner/playbooks/: playbooks.py  translation.json
