[project]
name = "mssqlpwner"
version = "1.3.2"
description = "Seamlessly interact and pwn MSSQL servers"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
    { name = "Nimrod Levy", email = "El3ct71k@gmail.com" }
]
dependencies = [
    "impacket>=0.11.0",
    "termcolor>=2.4.0",
    "prompt-toolkit>=3.0.45"
]

[build-system]
requires = ["setuptools>=77.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
packages = ["mssqlpwner"]

[project.scripts]
mssqlpwner = "mssqlpwner.cli:console"

[project.optional-dependencies]
dev = [
    "black>=24.4.2",
    "pylint>=3.2.2"
]
